# john_gospel_game

./: .gitignore  README.md  build_dist.sh  pubspec.yaml
.github/workflows/: dist-release-ubuntu.yml  dist-release-windows.yml  dist-release.yml
lib/: john_gospel_data.dart  lore_data.dart  lore_scene.dart  lore_scene_screen.dart  main_menu_screen.dart  main_screen.dart  screen.dart  sdl_bindings.dart
native/: CMakeLists.txt  Makefile  sdl_utils.c
